# orderbook-engine

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
benchmark/: benchmark_submit.py  benchmark_tombstone.py
src/: book.py  config.py  engine.py  eventlog.py  models.py
tests/: conftest.py  test_engine.py  test_eventlog.py  test_hypothesis_invariant_holds.py  test_models.py  test_orderbook_1.py  test_orderbook_2.py  test_orderbook_amend.py  test_orderbook_basics.py  test_orderbook_fok.py  test_orderbook_ioc.py  test_orderbook_market.py  test_orderbook_self_order_prevention.py
