[project]
name = "orderbook-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hypothesis>=6.156.6",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "sortedcontainers>=2.4.0",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "mypy>=2.3.0", "ruff>=0.15.21"]

[tool.mypy]
files = ["src"]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "sortedcontainers.*"
ignore_missing_imports = true
